apps/goatlint/src/snapshots/_foo.asdf@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: foo.asdf
working directory: 
----------
No files found to lint. Please check your paths and ignore patterns.
Finished in <variable>ms on 0 files with 126 rules using 1 threads.
----------
CLI result: LintNoFilesFound
----------
