apps/goatlint/src/snapshots/_foo.asdf@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: foo.asdf
working directory: 
----------
No files found to lint. Please check your paths and ignore patterns.
Finished in <variable>ms on 0 files with 93 rules using 1 threads.
----------
CLI result: LintNoFilesFound
----------
